compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__qualified_type_not_a_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2297
expression: "\nimport wibble.{type Function as FuncWrapper}\npub fn main(f: FuncWrapper) {\n  f()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam
pub type Function { Function(fn() -> Nil) }

-- main.gleam

import wibble.{type Function as FuncWrapper}
pub fn main(f: FuncWrapper) {
  f()
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:3
  │
4 │   f()
  │   ^

This value is being called as a function but its type is:

    FuncWrapper
